Fixed the issue of some cookies not showing up in the cookie management dialog.

BUG: 284299
FIXED-IN: 4.8.3